<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/toggle_vibrate"
        android:title="@string/menu_toggle_vibrate"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:onClick="toggleVibrate" />
    
    <item android:id="@+id/menu_dialog_item"
        android:title="@string/menu_add_set"
        android:orderInCategory="20"
        android:showAsAction="never" />
    
    <item android:id="@+id/remove_current_set"
        android:title="@string/menu_remove_set"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:onClick="removeCurrentSet" />
    
    <item android:id="@+id/help_info"
        android:title="@string/menu_help_info"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:onClick="showHelpInfoDialog" />
    
</menu>
