<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="fill_parent" 
            android:layout_height="fill_parent" 
            xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="0dip"
    android:orientation="vertical"
    android:padding="5dip" >

    
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:gravity="left"
            android:layout_weight="1"
            android:padding="5dip"
            android:text="@string/text_info_title"
            android:textSize="20sp" />
    
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:gravity="left"
            android:layout_weight="1"
            android:paddingBottom="10dip"
            android:text="@string/text_info"
            android:textSize="15sp" />
    
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:gravity="left"
            android:layout_weight="1"
            android:padding="5dip"
            android:text="@string/text_help_title"
            android:textSize="20sp" />
    
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:gravity="left"
            android:layout_weight="1"
            android:paddingBottom="10dip"
            android:text="@string/text_help"
            android:textSize="15sp" />
    
</LinearLayout>
</ScrollView>